User docs redone (#63)
* added password change for users

* removed logs

* making some changes to the rider models

* made some changes to the rider accounts creation process

* initialized user docs

* finished up on login and signup docs for the users

* commented out the radarlabs and its files

---------
